--- a/index.Rmd
+++ b/index.Rmd
@@ -1,21 +1,32 @@
 ---
-title: "Machine Learning - Peer Graded Assignment: Prediction Assignment Writeup"
+title: "index1"
 author: "Suaid Ishak"
 date: "29 August 2016"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Coursera - Practical Machine Learning (Prediction Assignment Writeup)
-Introduction
+# Practical Machine Learning Project : Prediction Assignment Writeup
+
+
+## I. Overview
+This document is the final report of the Peer Assessment project from Coursera’s course Practical Machine Learning, as part of the Specialization in Data Science. It was built up in RStudio, using its knitr functions, meant to be published in html format.
+This analysis meant to be the basis for the course quiz and a prediction assignment writeup. The main goal of the project is to predict the manner in which 6 participants performed some exercise as described below. This is the “classe” variable in the training set. The machine learning algorithm described here is applied to the 20 test cases available in the test data and the predictions are submitted in appropriate format to the Course Project Prediction Quiz for automated grading.
+
+
+
+## II. Background
 Using devices such as Jawbone Up, Nike FuelBand, and Fitbit it is now possible to collect a large amount of data about personal activity relatively inexpensively. These type of devices are part of the quantified self movement - a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. One thing that people regularly do is quantify how much of a particular activity they do, but they rarely quantify how well they do it. In this project, your goal will be to use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants. They were asked to perform barbell lifts correctly and incorrectly in 5 different ways. More information is available from the website here: http://groupware.les.inf.puc-rio.br/har (see the section on the Weight Lifting Exercise Dataset).
 
-The project can be found on github: http://benakiva.github.io/practicalML/ and https://github.com/benakiva/practicalMLu can also embed plots, for example:
+Read more: http://groupware.les.inf.puc-rio.br/har#ixzz3xsbS5bVX
 
-Source of Data
+
+
+## III. Data Loading and Exploratory Analysis
+### a) Dataset Overview
 The training data for this project are available here:
 
 https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv
@@ -24,80 +35,167 @@ The test data are available here:
 
 https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv
 
-The data for this project come from this source: http://groupware.les.inf.puc-rio.br/har. If you use the document you create for this class for any purpose please cite them as they have been very generous in allowing their data to be used for this kind of assignment.
+The data for this project come from http://groupware.les.inf.puc-rio.br/har. Full source:
 
-Loading Data
-In this section, we download the data files from the Internet and load them into two data frames. We ended up with a training dataset and a 20 observations testing dataset that will be submitted to Coursera.
+Velloso, E.; Bulling, A.; Gellersen, H.; Ugulino, W.; Fuks, H. “Qualitative Activity Recognition of Weight Lifting Exercises. Proceedings of 4th International Conference in Cooperation with SIGCHI (Augmented Human ’13)”. Stuttgart, Germany: ACM SIGCHI, 2013.
 
-Loading all relevant libraries
+My special thanks to the above mentioned authors for being so generous in allowing their data to be used for this kind of assignment.
+
+A short description of the datasets content from the authors’ website:
+
+“Six young health participants were asked to perform one set of 10 repetitions of the Unilateral Dumbbell Biceps Curl in five different fashions: exactly according to the specification (Class A), throwing the elbows to the front (Class B), lifting the dumbbell only halfway (Class C), lowering the dumbbell only halfway (Class D) and throwing the hips to the front (Class E).
+
+Class A corresponds to the specified execution of the exercise, while the other 4 classes correspond to common mistakes. Participants were supervised by an experienced weight lifter to make sure the execution complied to the manner they were supposed to simulate. The exercises were performed by six male participants aged between 20-28 years, with little weight lifting experience. We made sure that all participants could easily simulate the mistakes in a safe and controlled manner by using a relatively light dumbbell (1.25kg)."
+
+### b) Environment Preparation
+We first upload the R libraries that are necessary for the complete analysis.
 ```{r}
-library(lattice)
-library(ggplot2)
+rm(list=ls())                
+# free up memory for the download of the data sets
+library(knitr)
 library(caret)
 library(rpart)
 library(rpart.plot)
-library(RColorBrewer)
 library(rattle)
 library(randomForest)
-```
-Load the training dataset
-```{r}
-dt_training <- read.csv("pml-training.csv", na.strings=c("NA",""), strip.white=T)
-```
-Load the testing dataset
-```{r}
-dt_testing <- read.csv("pml-testing.csv", na.strings=c("NA",""), strip.white=T)
-```
-## Data Cleansing
-In this section, we will remove all columns that contains NA and remove features that are not in the testing dataset. The features containing NA are the variance, mean and standard devition (SD) within each window for each feature. Since the testing dataset has no time-dependence, these values are useless and can be disregarded. We will also remove the first 7 features since they are related to the time-series or are not numeric.
-```{r}
-features <- names(dt_testing[,colSums(is.na(dt_testing)) == 0])[8:59]
-
-# Only use features used in testing cases.
-dt_training <- dt_training[,c(features,"classe")]
-dt_testing <- dt_testing[,c(features,"problem_id")]
-
-dim(dt_training); dim(dt_testing)
-```
-## Partitioning the Dataset
-Following the recommendation in the course Practical Machine Learning, we will split our data into a training data set (60% of the total cases) and a testing data set (40% of the total cases; the latter should not be confused with the data in the pml-testing.csv file). This will allow us to estimate the out of sample error of our predictor.
-```{r}
+library(corrplot)
 set.seed(12345)
-
-inTrain <- createDataPartition(dt_training$classe, p=0.6, list=FALSE)
-training <- dt_training[inTrain,]
-testing <- dt_training[-inTrain,]
-
-dim(training); dim(testing);
 ```
-## Building the Decision Tree Model
-Using Decision Tree, we shouldn???t expect the accuracy to be high. In fact, anything around 80% would be acceptable.
+### c) Data Loading and Cleaning
+The next step is loading the dataset from the URL provided above. The training dataset is then partinioned in 2 to create a Training set (70% of the data) for the modeling process and a Test set (with the remaining 30%) for the validations. The testing dataset is not changed and will only be used for the quiz results generation.
 ```{r}
-modFitDT <- rpart(classe ~ ., data = training, method="class")
-fancyRpartPlot(modFitDT)
+# set the URL for the download
+UrlTrain <- "pml-training.csv"
+UrlTest  <- "pml-testing.csv"
+
+# download the datasets
+training <- read.csv(UrlTrain)
+testing  <- read.csv(UrlTest)
+
+# create a partition with the training dataset 
+inTrain  <- createDataPartition(training$classe, p=0.7, list=FALSE)
+TrainSet <- training[inTrain, ]
+TestSet  <- training[-inTrain, ]
+dim(TrainSet)
 ```
-## Predicting with the Decision Tree Model
 ```{r}
+dim(TestSet)
+```
+Both created datasets have 160 variables. Those variables have plenty of NA, that can be removed with the cleaning procedures below. The Near Zero variance (NZV) variables are also removed and the ID variables as well.
+```{r}
+# remove variables with Nearly Zero Variance
+NZV <- nearZeroVar(TrainSet)
+TrainSet <- TrainSet[, -NZV]
+TestSet  <- TestSet[, -NZV]
+dim(TrainSet)
+```
+```{r}
+dim(TestSet)
+```
+```{r}
+# remove variables that are mostly NA
+AllNA    <- sapply(TrainSet, function(x) mean(is.na(x))) > 0.95
+TrainSet <- TrainSet[, AllNA==FALSE]
+TestSet  <- TestSet[, AllNA==FALSE]
+dim(TrainSet)
+```
+```{r}
+dim(TestSet)
+```
+```{r}
+# remove identification only variables (columns 1 to 5)
+TrainSet <- TrainSet[, -(1:5)]
+TestSet  <- TestSet[, -(1:5)]
+dim(TrainSet)
+```
+```{r}
+dim(TestSet)
+```
+With the cleaning process above, the number of variables for the analysis has been reduced to 54 only.
+
+### d) Correlation Analysis
+A correlation among variables is analysed before proceeding to the modeling procedures.
+```{r Corr_Analysis}
+corMatrix <- cor(TrainSet[, -54])
+corrplot(corMatrix, order = "FPC", method = "color", type = "lower", 
+         tl.cex = 0.8, tl.col = rgb(0, 0, 0))
+```
+The highly correlated variables are shown in dark colors in the graph above. To make an evem more compact analysis, a PCA (Principal Components Analysis) could be performed as pre-processing step to the datasets. Nevertheless, as the correlations are quite few, this step will not be applied for this assignment.
+
+
+
+## IV. Prediction Model Building
+Three methods will be applied to model the regressions (in the Train dataset) and the best one (with higher accuracy when applied to the Test dataset) will be used for the quiz predictions. The methods are: Random Forests, Decision Tree and Generalized Boosted Model, as described below.
+A Confusion Matrix is plotted at the end of each analysis to better visualize the accuracy of the models.
+### a) Method: Random Forest
+```{r Randon_Forest}
+# model fit
 set.seed(12345)
-
-prediction <- predict(modFitDT, testing, type = "class")
-confusionMatrix(prediction, testing$class)
+controlRF <- trainControl(method="cv", number=3, verboseIter=FALSE)
+modFitRandForest <- train(classe ~ ., data=TrainSet, method="rf",
+                          trControl=controlRF)
+modFitRandForest$finalModel
 ```
-## Building the Random Forest Model
-Using random forest, the out of sample error should be small. The error will be estimated using the 40% testing sample. We should expect an error estimate of < 3%.
 ```{r}
+# prediction on Test dataset
+predictRandForest <- predict(modFitRandForest, newdata=TestSet)
+confMatRandForest <- confusionMatrix(predictRandForest, TestSet$classe)
+confMatRandForest
+```
+```{r}
+# plot matrix results
+plot(confMatRandForest$table, col = confMatRandForest$byClass, 
+     main = paste("Random Forest - Accuracy =",
+                  round(confMatRandForest$overall['Accuracy'], 4)))
+```
+### b) Method: Decision Trees
+```{r}
+# model fit
 set.seed(12345)
-modFitRF <- randomForest(classe ~ ., data = training, ntree = 1000)
+modFitDecTree <- rpart(classe ~ ., data=TrainSet, method="class")
+fancyRpartPlot(modFitDecTree)
 ```
-## Predicting on the Testing Data (pml-testing.csv)
 ```{r}
-predictionDT <- predict(modFitDT, dt_testing, type = "class")
-predictionDT
+# prediction on Test dataset
+predictDecTree <- predict(modFitDecTree, newdata=TestSet, type="class")
+confMatDecTree <- confusionMatrix(predictDecTree, TestSet$classe)
+confMatDecTree
 ```
-## Random Forest Prediction
 ```{r}
-predictionRF <- predict(modFitRF, dt_testing, type = "class")
-predictionRF
+# plot matrix results
+plot(confMatDecTree$table, col = confMatDecTree$byClass, 
+     main = paste("Decision Tree - Accuracy =",
+                  round(confMatDecTree$overall['Accuracy'], 4)))
 ```
-## Conclusion
-As can be seen from the confusion matrix the Random Forest model is very accurate, about 99%. Because of that we could expect nearly all of the submitted test cases to be correct. It turned out they were all correct.
+### c) Method: Generalized Boosted Model
+```{r}
+# model fit
+set.seed(12345)
+controlGBM <- trainControl(method = "repeatedcv", number = 5, repeats = 1)
+modFitGBM  <- train(classe ~ ., data=TrainSet, method = "gbm",
+                    trControl = controlGBM, verbose = FALSE)
+modFitGBM$finalModel
+```
+```{r}
+# prediction on Test dataset
+predictGBM <- predict(modFitGBM, newdata=TestSet)
+confMatGBM <- confusionMatrix(predictGBM, TestSet$classe)
+confMatGBM
+```
+```{r}
+# plot matrix results
+plot(confMatGBM$table, col = confMatGBM$byClass, 
+     main = paste("GBM - Accuracy =", round(confMatGBM$overall['Accuracy'], 4)))
+```
+## V. Applying the Selected Model to the Test Data
+The accuracy of the 3 regression modeling methods above are:
+
+Random Forest : 0.9963
+Decision Tree : 0.7368
+GBM : 0.9839
+In that case, the Random Forest model will be applied to predict the 20 quiz results (testing dataset) as shown below.
+```{r}
+predictTEST <- predict(modFitRandForest, newdata=testing)
+predictTEST
+```
+
